--- a/private/mails/notificationCommentMail.html
+++ b/private/mails/notificationCommentMail.html
@@ -52,7 +52,7 @@
 							<div style="font-size: 16px; font-weight: bold;">
 								{{comment.title}}
 							</div>
-							{{{commentTextHtml}}}
+							{{{comment.text}}}
 						</td>
 					</tr>
 				</table>
