disable buttons on submit
fixes #1160

--- a/imports/ui/pages/reset-password/reset-password.html
+++ b/imports/ui/pages/reset-password/reset-password.html
@@ -37,7 +37,7 @@
 				</fieldset>
 			{{/unless}}
 			<div class="form-actions">
-				<button type="submit" class="btn btn-save js-reset-pwd" {{submitDisabled}}>
+				<button type="submit" class="btn btn-save js-reset-pwd" {{submitDisabled}} {{disabledIfBusy}}>
 					<span class="fa fa-child"></span>
 					{{mf 'resetPassword.confirm' "Set my password"}}
 				</button>
