adapt sass-lint config and satisfy linter

--- a/imports/ui/pages/admin/feature-group/feature-group.html
+++ b/imports/ui/pages/admin/feature-group/feature-group.html
@@ -23,7 +23,7 @@
 	<form id="featureGroup">
 		<div class="form-group">
 			<select id="groupToBeFeatured" class="form-control">
-				<option value='' disabled selected class="select_placeholder">
+				<option value='' disabled selected class="select-placeholder">
 					{{mf '_selection.pleaseSelect'}}
 				</option>
 				{{#each group in groups}}
