--- a/imports/ui/pages/course-details/course-details.html
+++ b/imports/ui/pages/course-details/course-details.html
@@ -115,7 +115,7 @@
 		<div class="tab-pane active" id="description">
 			{{> courseDetailsDescription editableDescription=editableDescription course=course}}
 		</div>
-		<div class="tab-pane" id="history">
+		<div class="tab-pane course-history" id="history">
 			{{> coursehistory}}
 		</div>
 		{{> pricePolicy dismissable=true wrap='course-details-price-policy'}}
