--- a/imports/ui/pages/reset-password/reset-password.html
+++ b/imports/ui/pages/reset-password/reset-password.html
@@ -1,7 +1,7 @@
 <template name="resetPassword">
 	<div class="container-sm">
 		<h1>{{mf 'resetPassword.title' "Reset your password"}}</h1>
-		<form class="resetPassword">
+		<form class="reset-password">
 			<div class="form-group">
 				<div class="btn-group">
 					<button type="button" class="btn btn-default js-hide-pwd {{#unless showPassword}}active{{/unless}}">
